# PKMNFMG

./: CMakeLists.txt  LICENSE  Makefile  README.md
assets/: Dataset.csv  NPC_OW_DEF.csv  Outside.ldtk
include/: ActionHandler.h  BattleFunctionMap.h  BattleManager.h  CSVCache.h  Controller.h  ControllerSingleton.h  GameManager.h  GameObject.h  PKMN.h  TileMap.h  TileObjects.h  npc.h  npc_config.h  player.h
resources/: 6_I1.ase  Acerola_0.ase  Acerola_1.ase  Acerola_G1.ase  AetherGirl_0.ase  Aether_1.ase  Dataset.ods  Game_Load.csv  Game_Load.ods  Lopunny_0.ase  Lopunny_1.ase  Lopunny_G1.ase  Outside2.ldtk  Schoolgirl_0.ase  Schoolgirl_G1.ase  Schoolgirl_walk.ase  player.ase
src/: ActionHandler.cpp  BattleFunctionMap.cpp  BattleManager.cpp  Controller.cpp  GameManager.cpp  PKMN.cpp  TileMap.cpp  TileObjects.cpp  main.cpp  npc.cpp  player.cpp
